--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,10 @@ a.active hr{  /* active class for and hr tag */
   font-weight: 400;
   font-style: normal;
 }
+
+@media(max-width:640px){
+    a.active {
+        color: white;
+        background-color: black;
+    }
+}
