--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ a.active hr{  /* active class for and hr tag */
   font-style: normal;
 }
 
+::-webkit-scrollbar{
+    display: none;
+}
+
 @media(max-width:640px){
     a.active {
         color: white;
